ingress/kustomize/apisix/base/apisix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    # cert-manager.io/cluster-issuer: letsencrypt-staging
  name: apisix-ingress
  namespace: ingress-apisix
spec:
  ingressClassName: apisix
  defaultBackend:
    service:
      name: apisix-gateway
      port:
        number: 443
  tls:
  - hosts:
    - example.com
    - "*.example.com"
    secretName: apisix-letsencrypt-cert
