ingress/kustomize/apisix/base/httpbin-tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    # cert-manager.io/cluster-issuer: letsencrypt-staging
    external-dns.alpha.kubernetes.io/hostname: httpbin.internal.example.com
  name: httpbin-ingress
  namespace: default
spec:
  ingressClassName: apisix
  defaultBackend:
    service:
      name: httpbin
      port:
        number: 80
  tls:
  - hosts:
    - httpbin.example.com
    secretName: httpbin-letsencrypt-cert
